@@ -185,6 +185,25 @@ module DirectObject : sig
   *)
   val refs_dict : dict_t -> Entry.t MapKey.t
 
+  (*   Replace all undefined references by the null object
+       Args    :
+       - set of defined references
+       - error context
+       - object
+       Returns :
+       - converted object
+  *)
+  val undef_refs_to_null : 'a MapKey.t -> Errors.error_ctxt -> t -> t
+  (*   Change all references according to a conversion table
+       Args    :
+       - set of defined references
+       - error context
+       - dictionary
+       Returns :
+       - converted dictionary
+  *)
+  val undef_refs_to_null_dict : 'a MapKey.t -> Errors.error_ctxt -> dict_t -> dict_t
+
   (*   Change all references according to a conversion table
        Args    :
        - conversion table
